terminando a primeira section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,25 @@ body{
     font-size: 25px;
 }
 .main{
-    background-color: #dcdde1;
+    border-radius: 20px;
+    background-color:#2c2b2b;
     width: 80%;
-    margin: auto;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+    box-shadow: 10px 15px 15px black;
+}
+.main .picture{
+    margin:auto;
+    background-color: black;
+    width:100% ;
+    max-width:600px ;
+    height: auto;
+    
+}
+.main .picture img{
+    height: 600px;
+    width: 100%;
+    object-fit: cover
 }
