--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,10 +136,32 @@ footer {
 footer p{
     font-size: 20px;
 }
-@media (max-width:500px) {
-   
+@media (max-width:400px) {
+    .section-2{
+        max-width: 350px;
+        width: 100%;
+        padding: 20px;
+    }
+    .main .picture img{
+        height:250px ;
+    }
+    
+  
+}
+@media (max-width:600px) {
+    .main{
+      width: 80%;
+    }
     .picture img{
         max-height:400px ;
+        
+    }
+    .section-2{
+        max-width: 550px;
+        width: 100%;
+    }
+    .main .picture img{
+        height:450px ;
     }
 }
 @media (max-width:800px) {
