--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@ body{
     text-align: center;
     font-size: 58px;
     text-shadow: black;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     border-bottom: 2px solid rgba(63, 63, 63, 0.8);
-    padding-bottom: 10px;
+    
 }
 .title-body .desc{
     margin-bottom: 30px;
@@ -145,8 +145,29 @@ footer p{
     .main .picture img{
         height:250px ;
     }
+    .title-body{
+      
+    }
+    .title-body h1{
+        font-size: 35px;
+        
+    }
+    .title-body .desc p{
+        font-size: 20px;
+        margin: 0px;
+        padding: 0px;
+    }
     
   
+}
+@media (max-width:500px) {
+    .section-2 {
+        
+        padding: 20px;
+    }
+    .title-body h1{
+        margin: 10px;
+    }
 }
 @media (max-width:600px) {
     .main{
